--- a/typewriter.yml
+++ b/typewriter.yml
@@ -2,7 +2,7 @@
 # Just run `npx typewriter@next` to re-generate a client with the latest versions of these events.
 
 scripts:
-  token: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
+  # token: aws-okta exec dev-privileged -- chamber export typewriter | jq -r .typewriter_token
   after: ./node_modules/.bin/prettier --write src/analytics/plan.json
 
 # You can find more documentation on configuring this client in the Segment docs.
