--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "jest-expect-message": "^1.0.2",
     "lint-staged": "^8.1.7",
     "np": "^5.0.1",
+    "snyk": "^1.250.0",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33",
-    "snyk": "^1.250.0"
+    "typewriter": "^7.0.0-33"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -72,6 +72,7 @@
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "react": "^16.9.0",
+    "semver": "^6.3.0",
     "sort-keys": "^3.0.0",
     "typescript": "^3.4.5",
     "yargs": "^13.2.2"
