--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "make build && git add -A && lint-staged"
+      "pre-commit": "make precommit"
     }
   }
 }
