--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,6 +123,7 @@ jobs:
           command: |
             sudo gem install xcpretty
             sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            sudo gem install cocoapods-check
       # - run:
       #     name: Fetch Cocoapods specs
       #     command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
@@ -135,12 +136,12 @@ jobs:
             yarn dev &
             cd ..
             sleep 5
-            make clear-mock && \
-              yarn run -s dev build --config=./tests/e2e/ios-objc && \
-              cd tests/e2e/ios-objc && \
-              pod install && \
-              set -o pipefail && xcodebuild test $(XC_OBJECTIVE_C_ARGS) | xcpretty && \
-              SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
+            make clear-mock
+            yarn run -s dev build --config=./tests/e2e/ios-objc
+            cd tests/e2e/ios-objc
+            pod check --verbose || pod install
+            set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination platform=iOS Simulator,name=iPhone 11 | xcpretty
+            SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
   test-ios-objc-prod:
     macos:
       xcode: "11.0.0"
