--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,9 +124,8 @@ jobs:
             sudo gem install xcpretty
             sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
             sudo gem install cocoapods-check
-      # - run:
-      #     name: Fetch Cocoapods specs
-      #     command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+      - restore_cache:
+          key: objc-deps-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
           name: Run iOS Objective-C Tests
           command: |
@@ -142,6 +141,10 @@ jobs:
             pod check --verbose || pod install
             set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination platform=iOS Simulator,name=iPhone 11 | xcpretty
             SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
+      - save_cache:
+          paths:
+            - tests/e2e/ios-objc/Pods
+          key: objc-deps-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
   test-ios-objc-prod:
     macos:
       xcode: "11.0.0"
