--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
             yarn run -s dev build --config=./tests/e2e/ios-objc
             cd tests/e2e/ios-objc
             pod check --verbose || pod install
-            set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination platform=iOS Simulator,name=iPhone 11 | xcpretty
+            set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination "platform=iOS Simulator,name=iPhone 11" | xcpretty
             SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
       - save_cache:
           paths:
