--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,10 +125,13 @@ jobs:
             sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
             sudo gem install cocoapods-check
       - restore_cache:
-          key: objc-deps-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
+          key: objc-deps-v2-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
           name: Run iOS Objective-C Tests
           command: |
+            ls -la || echo "failed"
+            ls -la tests/e2e/ios-objc || echo "failed"
+            ls -la tests/e2e/ios-objc/Pods || echo "failed"
             git clone https://github.com/segmentio/mock.git
             cd mock
             yarn
@@ -141,10 +144,13 @@ jobs:
             pod check --verbose || pod install
             set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination "platform=iOS Simulator,name=iPhone 11" | xcpretty
             SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
+            ls -la || echo "failed"
+            ls -la tests/e2e/ios-objc || echo "failed"
+            ls -la tests/e2e/ios-objc/Pods || echo "failed"
       - save_cache:
           paths:
             - tests/e2e/ios-objc/Pods
-          key: objc-deps-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
+          key: objc-deps-v2-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
   test-ios-objc-prod:
     macos:
       xcode: "11.0.0"
