--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,7 +125,7 @@ jobs:
             sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
             sudo gem install cocoapods-check
       - restore_cache:
-          key: objc-deps-v6-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
+          key: objc-deps-v7-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       # - run:
       #     name: Run iOS Objective-C Tests
       #     command: |
@@ -144,6 +144,7 @@ jobs:
             ls -la || echo "failed"
             ls -la tests/e2e/ios-objc || echo "failed"
             ls -la tests/e2e/ios-objc/Pods || echo "failed"
+            cat tests/e2e/ios-objc/Podfile.lock || echo "failed"
             git clone https://github.com/segmentio/mock.git
             cd mock
             yarn
@@ -157,12 +158,11 @@ jobs:
             set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination "platform=iOS Simulator,name=iPhone 11" | xcpretty
             SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
             ls -la || echo "failed"
-            ls -la tests/e2e/ios-objc || echo "failed"
-            ls -la tests/e2e/ios-objc/Pods || echo "failed"
+            cat Podfile.lock || echo "failed"
       - save_cache:
           paths:
             - tests/e2e/ios-objc/Pods
-          key: objc-deps-v6-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
+          key: objc-deps-v7-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
   test-ios-objc-prod:
     macos:
       xcode: "11.0.0"
