--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,8 +122,11 @@ jobs:
           name: Install build dependencies
           command: |
             sudo gem install xcpretty
+            pod --version
             sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            pod --version
             sudo gem install cocoapods-check
+            pod --version
       - restore_cache:
           key: objc-deps-v7-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       # - run:
@@ -141,6 +144,7 @@ jobs:
       - run:
           name: Run iOS Objective-C Tests
           command: |
+            pod --version
             ls -la || echo "failed"
             ls -la tests/e2e/ios-objc || echo "failed"
             ls -la tests/e2e/ios-objc/Pods || echo "failed"
@@ -154,9 +158,13 @@ jobs:
             make clear-mock
             yarn run -s dev build --config=./tests/e2e/ios-objc
             cd tests/e2e/ios-objc
-            pod check --verbose || pod install
+            pod --version
+            pod check --verbose || pod install --deployment
+            pod --version
             set -o pipefail && xcodebuild test -workspace TypewriterExample.xcworkspace -scheme TypewriterExample -destination "platform=iOS Simulator,name=iPhone 11" | xcpretty
+            pod --version
             SDK=analytics-ios LANGUAGE=objective-c IS_DEVELOPMENT=true yarn run -s jest ./tests/e2e/suite.test.ts
+            pod --version
             ls -la || echo "failed"
             cat Podfile.lock || echo "failed"
       - save_cache:
