dont bg mock in make else you lose it

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,7 +136,9 @@ jobs:
       - run:
           name: Run iOS Objective-C Tests
           command: |
-            make start-mock-bg
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && \
+              yarn dev & && \
+              cd .. && sleep 5
             make test-ios-objc-dev
   test-ios-objc-prod:
     macos:
@@ -163,7 +165,9 @@ jobs:
       - run:
           name: Run iOS Objective-C Tests
           command: |
-            make start-mock-bg
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && \
+              yarn dev & && \
+              cd .. && sleep 5
             make test-ios-objc-prod
   test-ios-swift-dev:
     macos:
@@ -190,7 +194,9 @@ jobs:
       - run:
           name: Run iOS Swift Tests
           command: |
-            make start-mock-bg
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && \
+              yarn dev & && \
+              cd .. && sleep 5
             make test-ios-swift-dev
   test-ios-swift-prod:
     macos:
@@ -217,7 +223,9 @@ jobs:
       - run:
           name: Run iOS Swift Tests
           command: |
-            make start-mock-bg
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && \
+              yarn dev & && \
+              cd .. && sleep 5
             make test-ios-swift-prod
 
 workflows:
