--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,18 +121,24 @@ jobs:
           name: Install build dependencies
           command: |
             sudo gem install xcpretty
-            sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            sudo gem install cocoapods-check -v 1.1.0
+            pod --version
+      - restore_cache:
+          key: objc-deps-v10-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
-          name: Fetch Cocoapods specs
-          command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+          name: Install Cocoapods
+          command: |
+            cd tests/e2e/ios-objc
+            pod check --verbose || pod install --deployment
+      - save_cache:
+          paths:
+            - tests/e2e/ios-objc/Pods
+          key: objc-deps-v10-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
           name: Run iOS Objective-C Tests
           command: |
-            git clone https://github.com/segmentio/mock.git
-            cd mock
-            yarn
-            yarn dev &
-            cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
+            cd mock && yarn dev &
             sleep 5
             make test-ios-objc-dev
   test-ios-objc-prod:
@@ -145,18 +151,24 @@ jobs:
           name: Install build dependencies
           command: |
             sudo gem install xcpretty
-            sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            sudo gem install cocoapods-check -v 1.1.0
+            pod --version
+      - restore_cache:
+          key: objc-deps-v10-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
-          name: Fetch Cocoapods specs
-          command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+          name: Install Cocoapods
+          command: |
+            cd tests/e2e/ios-objc
+            pod check --verbose || pod install --deployment
+      - save_cache:
+          paths:
+            - tests/e2e/ios-objc/Pods
+          key: objc-deps-v10-{{ checksum "tests/e2e/ios-objc/Podfile.lock" }}
       - run:
           name: Run iOS Objective-C Tests
           command: |
-            git clone https://github.com/segmentio/mock.git
-            cd mock
-            yarn
-            yarn dev &
-            cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
+            cd mock && yarn dev &
             sleep 5
             make test-ios-objc-prod
   test-ios-swift-dev:
@@ -169,18 +181,24 @@ jobs:
           name: Install build dependencies
           command: |
             sudo gem install xcpretty
-            sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            sudo gem install cocoapods-check -v 1.1.0
+            pod --version
+      - restore_cache:
+          key: swift-deps-v10-{{ checksum "tests/e2e/ios-swift/Podfile.lock" }}
       - run:
-          name: Fetch Cocoapods specs
-          command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+          name: Install Cocoapods
+          command: |
+            cd tests/e2e/ios-swift
+            pod check --verbose || pod install --deployment
+      - save_cache:
+          paths:
+            - tests/e2e/ios-swift/Pods
+          key: swift-deps-v10-{{ checksum "tests/e2e/ios-swift/Podfile.lock" }}
       - run:
           name: Run iOS Swift Tests
           command: |
-            git clone https://github.com/segmentio/mock.git
-            cd mock
-            yarn
-            yarn dev &
-            cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
+            cd mock && yarn dev &
             sleep 5
             make test-ios-swift-dev
   test-ios-swift-prod:
@@ -193,18 +211,24 @@ jobs:
           name: Install build dependencies
           command: |
             sudo gem install xcpretty
-            sudo gem install cocoapods -v $(var=$(tail -1 tests/e2e/ios-objc/Podfile.lock); echo ${var##COCOAPODS:})
+            sudo gem install cocoapods-check -v 1.1.0
+            pod --version
+      - restore_cache:
+          key: swift-deps-v10-{{ checksum "tests/e2e/ios-swift/Podfile.lock" }}
       - run:
-          name: Fetch Cocoapods specs
-          command: curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
+          name: Install Cocoapods
+          command: |
+            cd tests/e2e/ios-swift
+            pod check --verbose || pod install --deployment
+      - save_cache:
+          paths:
+            - tests/e2e/ios-swift/Pods
+          key: swift-deps-v10-{{ checksum "tests/e2e/ios-swift/Podfile.lock" }}
       - run:
           name: Run iOS Swift Tests
           command: |
-            git clone https://github.com/segmentio/mock.git
-            cd mock
-            yarn
-            yarn dev &
-            cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
+            cd mock && yarn dev &
             sleep 5
             make test-ios-swift-prod
 
