--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bin": "./dist/src/cli/index.js",
   "scripts": {
     "dev": "TS_NODE_FILES=true NODE_ENV=development ts-node ./src/cli",
-    "build": "rm -rf dist && yarn typewriter prod && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist/src/",
+    "build": "rm -rf dist && yarn dev prod && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist/src/",
     "test": "jest --testPathIgnorePatterns 'tests/e2e/.*' 'example'",
     "e2e": "make e2e",
     "update": "make update",
@@ -33,6 +33,7 @@
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.6",
+    "@types/object-hash": "^1.3.0",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
@@ -70,6 +71,7 @@
     "latest-version": "^5.1.0",
     "lodash": "4.17.12",
     "node-machine-id": "^1.1.12",
+    "object-hash": "^2.0.1",
     "prettier": "^1.17.0",
     "react": "^16.9.0",
     "semver": "^6.3.0",
@@ -120,7 +122,8 @@
       ],
       "@typescript-eslint/no-namespace": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/interface-name-prefix": "off"
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-empty-interface": "off"
     },
     "overrides": [
       {
