--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -11,7 +11,14 @@
     "baseUrl": ".",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "jsx": "react",
-    "lib": ["dom", "es2018"]
-  }
+    "jsx": "preserve",
+    "lib": ["dom", "es2018"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "isolatedModules": true
+  },
+  "exclude": ["node_modules"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
