--- a/tests/e2e/android-java/app/src/main/AndroidManifest.xml
+++ b/tests/e2e/android-java/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+    <activity android:name="com.segment.TypewriterJavaExample.DisplayMessageActivity"
+        android:parentActivityName="com.segment.TypewriterJavaExample.MainActivity">
+        <!-- The meta-data tag is required if you support API level 15 and lower -->
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.segment.TypewriterJavaExample.MainActivity" />
+    </activity>
   </application>
 
 </manifest>
