--- a/tests/e2e/android-java/app/build.gradle
+++ b/tests/e2e/android-java/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions{
+      unitTests {
+        includeAndroidResources = true
+      }
+    }
 }
 
 dependencies {
@@ -25,7 +30,6 @@ dependencies {
     implementation 'com.segment.analytics.android:analytics:4.+'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'androidx.test:core:1.0.0'
 }
