--- a/tests/e2e/android-java/app/build.gradle
+++ b/tests/e2e/android-java/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.segment.analytics.android:analytics:4.+'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.robolectric:robolectric:4.3'
+    testImplementation 'org.robolectric:robolectric:4.0'
     testImplementation 'androidx.test:core:1.0.0'
+    testImplementation 'androidx.test:runner:1.1.0'
 }
