--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,14 +244,10 @@ jobs:
       - image: circleci/openjdk:11.0.3-jdk-stretch
     steps: # a collection of executable commands
       - checkout # check out source code to working directory
-      - restore_cache:
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
       - run:
           name: Run tests
           command: |
-            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
-            cd mock && yarn dev &
-            sleep 5
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && yarn dev && sleep 5 && cd ..
             make test-android-dev
       - save_cache:
           paths:
@@ -270,14 +266,10 @@ jobs:
       - image: circleci/openjdk:11.0.3-jdk-stretch
     steps: # a collection of executable commands
       - checkout # check out source code to working directory
-      - restore_cache:
-          key: v1-gradle-cache-{{ checksum "build.gradle" }}
       - run:
           name: Run tests
           command: |
-            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd ..
-            cd mock && yarn dev &
-            sleep 5
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && yarn dev && sleep 5 && cd ..
             make test-android-prod
       - save_cache:
           paths:
