--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -243,11 +243,13 @@ jobs:
     docker: # run the steps with Docker
       - image: circleci/openjdk:11.0.3-jdk-stretch
     steps: # a collection of executable commands
-      - checkout # check out source code to working directory
+      - attach_workspace: { at: . }
       - run:
           name: Run tests
           command: |
-            git clone https://github.com/segmentio/mock.git && cd mock && yarn && yarn dev && sleep 5 && cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd..
+            cd mock && yarn dev & 
+            sleep 5
             make test-android-dev
       - save_cache:
           paths:
@@ -265,11 +267,13 @@ jobs:
     docker: # run the steps with Docker
       - image: circleci/openjdk:11.0.3-jdk-stretch
     steps: # a collection of executable commands
-      - checkout # check out source code to working directory
+      - attach_workspace: { at: . }
       - run:
           name: Run tests
           command: |
-            git clone https://github.com/segmentio/mock.git && cd mock && yarn && yarn dev && sleep 5 && cd ..
+            git clone https://github.com/segmentio/mock.git && cd mock && yarn && cd..
+            cd mock && yarn dev & 
+            sleep 5
             make test-android-prod
       - save_cache:
           paths:
